--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "homepage": "https://github.com/fire-birdtech/image-trait",
     "require": {
         "php": "^8.2",
-        "illuminate/http": "^10.0",
-        "illuminate/support": "^10.0"
+        "illuminate/http": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0"
     },
     "require-dev": {
         "pestphp/pest": "^2.0",
